--- a/site/index.html
+++ b/site/index.html
@@ -31,6 +31,20 @@
         Построить графики для каждой части.<br />
         Сделать выводы.
       </p>
+      <h2 class="text-2xl text-center py-5">
+        Результаты
+      </h2>
+      <p class="my-5 text-justify">
+        Было проанализировано 224139 java файлов. Для каждого файла были
+        получены значения Cyclomatic Complexity (CC) и количество переменных,
+        имеющих составные названия. Значения CC оказались распределены не
+        равномерно. Половина всех данных (49%) соответствуют значению CC=1. На
+        рис. 1 показано распеределение концетрации CC для нескольких областей в
+        процентном соотношении.
+      </p>
+      <div class="mx-auto">
+        <canvas id="concentration" width="100" height="100"></canvas>
+      </div>
       <p class="my-5">
         Разброс переменных при CC=1 очень большой. Видимо это небольшие файлы с
         простой логикой. Названия переменных в таких файлах не влияют на
