--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/output.css" />
   </head>
 
-  <body class="min-h-screen bg-gray-100 font-mono">
+  <body class="min-h-screen bg-gray-100">
     <div class="container mx-auto">
       <h1 class="text-3xl text-center py-10">Names vs. complexity</h1>
       <p class="my-5">
@@ -26,8 +26,7 @@
       </p>
       <p class="my-5">
         <span class="font-bold">План:</span> <br />
-        Поделить данные на три части по их концентрации. Найти их количественное
-        распределение.<br />
+        Разделить данные в зависимости от концентрации CC.<br />
         Построить графики для каждой части.<br />
         Сделать выводы.
       </p>
@@ -39,33 +38,25 @@
         получены значения Cyclomatic Complexity (CC) и количество переменных,
         имеющих составные названия. Значения CC оказались распределены не
         равномерно. Половина всех данных (49%) соответствуют значению CC=1. На
-        рис. 1 показано распеределение концетрации CC для нескольких областей в
+        рис. 1 показано распределение концентрации CC для нескольких областей в
         процентном соотношении.
       </p>
-      <div class="mx-auto">
+      <div class="mx-auto my-10">
         <canvas id="concentration" width="100" height="100"></canvas>
       </div>
-      <p class="my-5">
-        Разброс переменных при CC=1 очень большой. Видимо это небольшие файлы с
-        простой логикой. Названия переменных в таких файлах не влияют на
-        сложность, поэтому предлагаю их пока не учитывать.
+      <h3 class="text-xl text-center my-5">Анализ значений при CC = 1</h3>
+      <p>
+        Разброс <strong>уникальных</strong> значений составных названий
+        переменных при CC = 1 велик (рис. 2). Но в процентном соотношении таких
+        файлов мало (рис. 3). В основном такие файлы вообще не имеют составных
+        названий переменных (60% файлов).
       </p>
-      <p class="my-5">
-        В основном все данные сосредоточены в области 2 &lt; cc &lt; 10; 0 &lt;
-        compund_names &lt; 7. Это белый кусок на графике. Данных в этой области
-        так много, что ни бы закрыли весь график. Здесь можно обобщить и
-        сказать, что программы с допустимым уровнем сложности имеют определённое
-        и маленькое число compound names.
-      </p>
-      <p class="my-5">
-        Остальные данные - это последний график. По нему затрудняюсь что-то
-        сказать. Можно попробовать отфильтровать данные по значениям и
-        посмотреть распределение. Я попробую использовать другой тип графика,
-        чтобы проверить
-      </p>
-    </div>
-    <div style="margin: 0 auto">
-      <canvas id="myChart" width="800" height="800"></canvas>
+      <div class="mx-auto my-10">
+        <canvas id="cc-1-dissipation" width="100" height="100"></canvas>
+      </div>
+      <div class="mx-auto my-10">
+        <canvas id="cc-1-concentration-names" width="100" height="100"></canvas>
+      </div>
     </div>
     <script src="dist/main.js"></script>
   </body>
