--- a/site/index.html
+++ b/site/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="assets/css/output.css" />
   </head>
 
-  <body class="min-h-screen bg-gray-100">
+  <body class="min-h-screen bg-gray-100 py-10">
     <div class="container mx-auto">
-      <h1 class="text-3xl text-center py-10 font-bold">Names vs. complexity</h1>
+      <h1 class="text-3xl text-center font-bold">Names vs. complexity</h1>
       <p class="my-5">
         <span class="font-bold">TODO:</span> <br />
         1. Что-то сделать с ошибками парсинга *.java файлов в библиотеке
@@ -48,17 +48,21 @@
         Анализ значений compound names при CC = 1
       </h3>
       <p class="my-5 text-justify">
-        На рис. 3 показано распределение составных названий переменных при CC =
-        1. 60% данных не имеют составных названий переменных. 16% имеют 1
-        переменную, ещё 16% имеют небольшую сложность CC &lt; 5, и 8% -
-        остальные файлы.
-      </p>
-      <p class="my-5 text-justify">
-        На рис. 2 показаны уникальные значения составных названий переменных.
+        На рис. 2 показаны <strong>уникальные</strong> значения составных
+        названий переменных. Диапазон значений достаточно велик. Можно сделать
+        дополнительное исследование, чтобы выяснить в каких файлах возникают
+        большие значения.
       </p>
       <div class="mx-auto my-10">
         <canvas id="cc-1-dissipation" width="100" height="100"></canvas>
       </div>
+      <p class="my-5 text-justify">
+        На рис. 3 показано распределение составных названий переменных при CC =
+        1.<br />
+        60% данных не имеют составных названий переменных. 16% имеют 1
+        переменную, ещё 16% имеют небольшую сложность CC &lt; 5, и 8% -
+        остальные файлы.
+      </p>
       <div class="mx-auto my-10">
         <canvas id="cc-1-concentration-names" width="100" height="100"></canvas>
       </div>
@@ -73,39 +77,65 @@
       <div class="mx-auto my-10">
         <canvas id="cc-5-bubble" width="100" height="100"></canvas>
       </div>
+      <p class="my-5 text-justify">
+        На рис. 5 отображается концентрация compound names для этих же значений
+        CC.
+      </p>
+      <div class="mx-auto my-10">
+        <canvas id="cc-5-polar" width="100" height="100"></canvas>
+      </div>
 
       <h3 class="text-xl text-center my-5 font-bold">
         Анализ значений compound names при 5 &lt; CC &lt;= 10
       </h3>
       <p class="my-5 text-justify">
-        На рис. 5 показаны значения cc и compound names вместе с их частотой при
+        На рис. 6 показаны значения cc и compound names вместе с их частотой при
         значениях 5 &lt; CC &lt;= 10.
       </p>
       <div class="mx-auto my-10">
         <canvas id="cc-10-bubble" width="100" height="100"></canvas>
+      </div>
+      <div class="mx-auto my-10">
+        <canvas id="cc-10-polar" width="100" height="100"></canvas>
       </div>
 
       <h3 class="text-xl text-center my-5 font-bold">
         Анализ значений compound names при 10 &lt; CC &lt;= 20
       </h3>
       <p class="my-5 text-justify">
-        На рис. 6 показаны значения cc и compound names вместе с их частотой при
+        На рис. 8 показаны значения cc и compound names вместе с их частотой при
         значениях 10 &lt; CC &lt;= 20.
       </p>
       <div class="mx-auto my-10">
         <canvas id="cc-20-bubble" width="100" height="100"></canvas>
+      </div>
+      <div class="mx-auto my-10">
+        <canvas id="cc-20-polar" width="100" height="100"></canvas>
       </div>
 
       <h3 class="text-xl text-center my-5 font-bold">
         Анализ значений compound names при CC &gt; 20
       </h3>
       <p class="my-5 text-justify">
-        На рис. 6 показаны значения cc и compound names вместе с их частотой при
-        значениях CC &gt; 20.
+        На рис. 10 показаны значения cc и compound names вместе с их частотой
+        при значениях CC &gt; 20. Выбраны логарифмические оси из-за больших
+        значений величин.
       </p>
       <div class="mx-auto my-10">
         <canvas id="cc-inf-bubble" width="100" height="100"></canvas>
       </div>
+
+      <h2 class="text-2xl text-center my-5 font-bold">
+        Выводы
+      </h2>
+      <p class="my-5 text-justify">
+        Большинство файлов имеет минимальную сложность CC = 1, но они интереса
+        для этого исследования не представляют. Для случаев когда программы
+        имеют среднюю сложность (CC ~ 5), большую сложность (CC ~ 10) и очень
+        большую сложность (CC ~ 20) явной зависимости CC от compound vars нет.
+        Зависимость начинает прослеживаться при экстремально больших значениях
+        CC, но такие ситуации очень редки.
+      </p>
     </div>
     <script src="dist/main.js"></script>
   </body>
